--- a/src/app/doctor-cards/doctor-cards.component.html
+++ b/src/app/doctor-cards/doctor-cards.component.html
@@ -1,20 +1,19 @@
-<div class="top">
-<div class="card" style="width: 18rem;">
-    <img class="card-img-top" src="https://www.shutterstock.com/image-vector/male-doctor-smiling-happy-face-holding-2481032615" 
-    alt="Card image cap">
-    <div class="card-body">
-      <h5 class="card-title">Dr ABC</h5>
-      <p class="card-text">Cardiologist</p>
-      <a href="#" class="btn btn-primary">Book Appointment</a>
+<div class="doctor-list">
+  <div class="doctor-card">
+    <img src="https://www.shutterstock.com/image-vector/male-doctor-smiling-happy-face-holding-2481032615" alt="Doctor Image">
+    <div class="doctor-info">
+      <h3>Dr ABC</h3>
+      <p>Cardiologist</p>
+      <button (click)="goToBookings()">Book Appointment</button>
     </div>
   </div>
-  <div class="card" style="width: 18rem;">
-    <img class="card-img-top" src="https://www.shutterstock.com/image-vector/male-doctor-smiling-happy-face-holding-2481032615" 
-    alt="Card image cap">
-    <div class="card-body">
-      <h5 class="card-title">Dr ABC</h5>
-      <p class="card-text">Cardiologist</p>
-      <a href="#" class="btn btn-primary">Book Appointment</a>
+
+  <div class="doctor-card">
+    <img src="https://www.shutterstock.com/image-vector/male-doctor-smiling-happy-face-holding-2481032615" alt="Doctor Image">
+    <div class="doctor-info">
+      <h3>Dr ABC</h3>
+      <p>Cardiologist</p>
+      <button (click)="goToBookings()">Book Appointment</button>
     </div>
   </div>
 </div>
