--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,19 +2,21 @@
     
   <h2 class="h2"><a routerLink="">Hospital</a></h2>
    
-    <div>
+    <div class="search">
 <input type="text" placeholder="Search Hospital/Doctor" />
 <button>Search</button>
     </div>
+    <div class="nav-links">
 <ul>
     <li>
         <a routerLink="signup" >Signup</a>
     </li>
     <li>
-        <a href="">Dashboard</a>
+        <a routerLink="dashboard">Dashboard</a>
     </li>
     <li>
         🔔
     </li>
 </ul>
+</div>
 </nav>
