enable the dynamic rendering of the forms

--- a/src/app/doctor-cards/doctor-cards.component.html
+++ b/src/app/doctor-cards/doctor-cards.component.html
@@ -1,6 +1,6 @@
 <div class="doctor-list">
   <div class="doctor-card">
-    <img src="https://www.shutterstock.com/image-vector/male-doctor-smiling-happy-face-holding-2481032615" alt="Doctor Image">
+    <img src="assets/images/male-doctor-smiling-happy-face-600nw-2481032615.webp" alt="Doctor Image">
     <div class="doctor-info">
       <h3>Dr ABC</h3>
       <p>Cardiologist</p>
@@ -9,11 +9,46 @@
   </div>
 
   <div class="doctor-card">
-    <img src="https://www.shutterstock.com/image-vector/male-doctor-smiling-happy-face-holding-2481032615" alt="Doctor Image">
+    <img class="image" src="assets/images/male-doctor-smiling-happy-face-600nw-2481032615.webp" alt="Doctor Image">
     <div class="doctor-info">
       <h3>Dr ABC</h3>
       <p>Cardiologist</p>
       <button (click)="goToBookings()">Book Appointment</button>
     </div>
   </div>
+ 
+    <div class="doctor-card">
+      <img src="assets/images/male-doctor-smiling-happy-face-600nw-2481032615.webp" alt="Doctor Image">
+      <div class="doctor-info">
+        <h3>Dr ABC</h3>
+        <p>Cardiologist</p>
+        <button (click)="goToBookings()">Book Appointment</button>
+      </div>
+    </div>
+
+    <div class="doctor-card">
+      <img src="assets/images/male-doctor-smiling-happy-face-600nw-2481032615.webp" alt="Doctor Image">
+      <div class="doctor-info">
+        <h3>Dr ABC</h3>
+        <p>Cardiologist</p>
+        <button (click)="goToBookings()">Book Appointment</button>
+      </div>
+    </div>
+    <div class="doctor-card">
+      <img src="assets/images/male-doctor-smiling-happy-face-600nw-2481032615.webp" alt="Doctor Image">
+      <div class="doctor-info">
+        <h3>Dr ABC</h3>
+        <p>Cardiologist</p>
+        <button (click)="goToBookings()">Book Appointment</button>
+      </div>
+    </div>
+    <div class="doctor-card">
+      <img src="assets/images/male-doctor-smiling-happy-face-600nw-2481032615.webp" alt="Doctor Image">
+      <div class="doctor-info">
+        <h3>Dr ABC</h3>
+        <p>Cardiologist</p>
+        <button (click)="goToBookings()">Book Appointment</button>
+      </div>
+    </div>
 </div>
+
