--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="dashboard-container">
   <div class="person-card">
-    <img src="https://via.placeholder.com/120" alt="User Photo" class="profile-img" />
+    <img src="assets/images/male-doctor-smiling-happy-face-600nw-2481032615.webp" alt="User Photo" class="profile-img" />
     <div class="info">
       <h2>{{doctor.name}}</h2>
       <p><strong>{{doctor.phone}}</strong> +91 22222222</p>
@@ -15,7 +15,7 @@
     <h1>Patient List</h1>
 
     <div class="patient-card">
-      <img src="https://via.placeholder.com/100" alt="Patient Photo" class="patient-img" />
+      <img src="assets/images/male-doctor-smiling-happy-face-600nw-2481032615.webp" alt="Patient Photo" class="patient-img" />
       <div class="patient-info">
         <h3>Patient 1</h3>
         <p><strong>Age:</strong> 30</p>
@@ -25,7 +25,7 @@
     </div>
 
     <div class="patient-card">
-      <img src="https://via.placeholder.com/100" alt="Patient Photo" class="patient-img" />
+      <img src="assets/images/male-doctor-smiling-happy-face-600nw-2481032615.webp" alt="Patient Photo" class="patient-img" />
       <div class="patient-info">
         <h3>Patient 2</h3>
         <p><strong>Age:</strong> 28</p>
