implemented the videocalling facility dor doctors and patient

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -21,7 +21,7 @@
         <p><strong>Age:</strong> 30</p>
         <p><strong>Phone:</strong> 9855555555</p>
       </div>
-      <button class="btn">Take Appointment</button>
+      <button class="btn" (click)="call()">Take Appointment</button>
     </div>
 
     <div class="patient-card">
@@ -31,7 +31,7 @@
         <p><strong>Age:</strong> 28</p>
         <p><strong>Phone:</strong> 8765555555</p>
       </div>
-      <button class="btn">Take Appointment</button>
+      <button class="btn" (click)="call()">Take Appointment</button>
     </div>
   </div>
 </div>
