Implemented ngRx in the website

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -3,8 +3,8 @@
     <img src="assets/images/male-doctor-smiling-happy-face-600nw-2481032615.webp" alt="User Photo" class="profile-img" />
     <div class="info">
       <h2>{{doctor.name}}</h2>
-      <p><strong>{{doctor.phone}}</strong> +91 22222222</p>
-      <p><strong>{{doctor.address}}</strong> 221B Baker Street, London</p>
+      <p><strong>{{doctor.phone}}</strong></p>
+      <p><strong>{{doctor.address}}</strong> </p>
     </div>
     <button class="btn" (click)="editpage()">Edit Info</button>
   </div>
