some changes in CSS

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -172,7 +172,7 @@
 }
 
 .user-message {
-  background-color: #dcf8c6;
+  background-color: #7eacd9;
   margin-left: auto;
   border-bottom-right-radius: 5px;
 }
