--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,1 +1,16 @@
-<p>login works!</p>
+<div class="container">
+    <form class="signup">
+      <h2>Login</h2>
+  
+      <input type="text" placeholder="Full Name" required>
+      
+      <div class="password-field">
+        <input type="password" id="password" placeholder="Password" required>
+        <span class="toggle-password" onclick="togglePassword()">👁️</span>
+      </div>
+  
+      <button class="Summit" (click)="login()"
+      >LogIn</button>
+    </form>
+  </div>
+  
