--- a/src/app/components/appoitment/appoitment.component.html
+++ b/src/app/components/appoitment/appoitment.component.html
@@ -5,7 +5,7 @@
   <input type="date" name="date" required>
   <input type="time" name="time" required>
   <input type="text" placeholder="Phone No" name="phone" required>
-  <button>Book Appointment</button>
+  <button (click)="appointment()">Book Appointment</button>
 </form>
 </div>
 
