--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -109,7 +109,7 @@
 .dropdown {
   position: relative;
   /* Add extra padding to prevent dropdown from going off-screen */
-  padding-right: 10px;
+  text-align: center;
 }
 
 .dropdown-toggle {
