--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -29,8 +29,8 @@
         </li>
         
         <!-- Show these options when user is logged in -->
-       <!-- <li *ngIf="isLoggedIn">-->
-        <li>
+        <li *ngIf="isLoggedIn">
+        
           <a routerLink="dashboard">Dashboard</a>
         </li>
         <li *ngIf="isLoggedIn && userType === 'doctor'">
