done with the minor changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-navbar></app-navbar>
-
+<app-patient-dashboard></app-patient-dashboard>
+<app-dashboard></app-dashboard>
 <div class="container mt-4">
   <!-- This is where routed components will appear -->
   <router-outlet></router-outlet>
